--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
   </head>
   <body class="full-screen-preview">
     <div class="preview__header" data-view="ctaHeader" data-item-id="20569489">
-  <div class="preview__envato-logo">
-    <a class="header-envato_market" href="https://themeforest.net/item/roam-an-adventurous-travel-and-tourism-theme/20569489">Envato Market</a>
+  <div class="Nomadic-Crypto-logo">
+    <a class="header-envato_market" href="https://www.canva.com/design/DAFLj5F5nhk/Hf5vUqiHa9ahyHutJWEQ0A/view?utm_content=DAFLj5F5nhk&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton">Nomadic Crypto</a>
   </div>
 
   <div id="js-preview__actions" class="preview__actions">
