--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <link rel="preload" href="https://public-assets.envato-static.com/assets/generated_sprites/common-14f8bc60470b39265fe5c01e92035209bd04b91cd7da99d59ca3ccd9de5eac62.png" as="image">
 
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Roam - Travel & Tourism Theme Preview - ThemeForest</title>
+    <title>Nomadic Crypto - Traveller Club </title>
     <meta name="description" content="&lt;a href=&quot;http://preview.themeforest.net/item/roam-an-adventurous-travel-and-tourism-theme...">
     <meta name="robots" content="noindex, nofollow">
     <meta name="viewport" content="width=device-width, minimum-scale=1, maximum-scale=1">
@@ -51,7 +51,7 @@
 
   <div id="js-preview__actions" class="preview__actions">
   <div class="preview__action--buy">
-    <a class="header-buy-now e-btn--3d -color-primary" href="https://themeforest.net/checkout/from_item/20569489?license=regular&support=bundle_6month">Buy now</a>
+    <a class="header-buy-now e-btn--3d -color-primary" href="https://themeforest.net/checkout/from_item/20569489?license=regular&support=bundle_6month">Register Now</a>
   </div>
 </div>
 </div>
